# Aria

./: .gitignore  Aria.sln  CMakeLists.txt  Makefile  README.md  charts.py  copylog.py  results.py
Algorithm/: Algo_turtle_intraday.cpp  Algo_turtle_intraday.h  Algorithm.cpp  Algorithm.h  Algorithm.vcxproj  Algorithm.vcxproj.filters  AlgorithmInitializer.cpp  AlgorithmInitializer.h  AlgorithmManager.cpp  AlgorithmManager.h  Algorithm_Buyandhold.cpp  Algorithm_Buyandhold.h  Algorithm_Py.cpp  Algorithm_Py.h  BacktestBrokerage.cpp  BacktestBrokerage.h  BoostExport.h  Brokerage.cpp  Brokerage.h  CMakeLists.txt  IAlgorithmManager.h  Makefile  Portfolio.cpp  Portfolio.h  PortfolioManager.cpp  PortfolioManager.h  TradeJobNode.cpp  TradeJobNode.h  stdafx.h
Aria/: Algorithm_Buyandhold_Py.py  Aria.cpp  Aria.vcxproj  Aria.vcxproj.filters  CMakeLists.txt  CSV_OHLCV.py  Makefile  TuShare_OHLCV_day.py  da.csv  stdafx.cpp  stdafx.h  table.csv
Aria/py_algos/: Algorithm_Buyandhold_Py.py
Aria/py_datasources/: CSV_OHLCV.py  TuShare_OHLCV_day.py
CTPClient/: CMakeLists.txt  CTPClient.cpp  CTPClient.h
Common/: BlockingQueue.h  Common.h  Common.vcxproj  Common.vcxproj.filters  IMasterTimeHandler.h  ScopedGILRelease.h  Singleton.h  TimeService.h  global.h  logger.h  logger_init.h  mode.h
Data/: BoostExport.h  CMakeLists.txt  Data.vcxproj  Data.vcxproj.filters  DataFeed.cpp  DataFeed.h  DataFeed_OHLCV.cpp  DataFeed_OHLCV.h  DataInitializer.cpp  DataInitializer.h  DataSeries.cpp  DataSeries.h  DataSlice.cpp  DataSlice.h  IDataFeed.h  Indicator.cpp  Indicator.h  Indicator_SMA.cpp  Indicator_SMA.h  Makefile  OHLC.cpp  OHLC.h  OHLCV.cpp  OHLCV.h  OHLCVReader.cpp  OHLCVReader.h  OHLCVReader_Py.cpp  OHLCVReader_Py.h  RealTimeDataFeed.cpp  RealTimeDataFeed.h  Resolution.h  Symbol.cpp  Symbol.h  dllmain.cpp  stdafx.h
Engine/: BacktestTimeHandler.cpp  BacktestTimeHandler.h  CMakeLists.txt  Engine.cpp  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  Makefile  RealTimeEngine.cpp  RealTimeEngine.h  Scheduler.cpp  Scheduler.h  dllmain.cpp  stdafx.h
FIXClient/: CMakeLists.txt  FIXClient.cpp  FIXClient.h  FIXClientHandler.cpp  FIXClientHandler.h
FIXClient/FIXConfig/: .gitignore  OKCoin.hpp
FIXClientTest/: CMakeLists.txt  FIXClientTest.cpp
Libs/gtest/: CMakeLists.txt
Libs/talib/lib/: libta_lib.so.0.0.0
config/: FIX44.xml  OKCoinFIX.cfg
tests/: test_main.cpp
