CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT(Aria)

SET(CMAKE_CXX_STANDARD 14)

SET(COMMON ${PROJECT_SOURCE_DIR}/Common)

SET(PYTHON27 /usr/include/python2.7/)
SET(PYTHON27LIB /lib/)
FIND_LIBRARY(LIBPYTHON NAMES python2.7)

#CTP
SET(CTPINCLUE ${PROJECT_SOURCE_DIR}/Libs/CTP/include)
SET(CTPLIB ${PROJECT_SOURCE_DIR}/Libs/CTP/lib)
find_library(CTP_MDUSER_LIBRARY NAMES thostmduserapi.so PATHS ${CTPLIB})
message(${CTP_MDUSER_LIBRARY})

#pthread
SET(CMAKE_THREAD_PREFER_PTHREAD true)
FIND_PACKAGE(Threads)
IF (Threads_FOUND)
    INCLUDE_DIRECTORIES(SYSTEM ${Threads_INCLUDE_DIR})
    MESSAGE("Are we using pthreads? ${CMAKE_USE_PTHREADS_INIT}")
ENDIF ()

FIND_PACKAGE(Boost COMPONENTS python system thread filesystem date_time log log_setup REQUIRED)

IF (Boost_FOUND)
    SET(Boost_USE_STATIC_LIBS OFF)
    SET(Boost_USE_MULTITHREADED ON)
    SET(Boost_USE_STATIC_RUNTIME OFF)
    ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)
    INCLUDE_DIRECTORIES(SYSTEM ${Boost_INCLUDE_DIR})
    LINK_DIRECTORIES(${Boost_LIBRARY_DIR})

    MESSAGE("Boost information")
    MESSAGE("Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}")
    MESSAGE("Boost_LIBRARY_DIRS: ${Boost_LIBRARY_DIRS}")
    MESSAGE("Boost Libraries: ${Boost_LIBRARIES}")
ENDIF ()

ADD_SUBDIRECTORY(Data)
ADD_SUBDIRECTORY(Algorithm)
ADD_SUBDIRECTORY(Engine)
ADD_SUBDIRECTORY(CTPClient)
ADD_SUBDIRECTORY(Aria)

