INCLUDE_DIRECTORIES(${CTPINCLUE})

set(CTP_LIBRARY_DIRS ${PROJECT_SOURCE_DIR}/Libs/CTP/lib)
message(${CTP_LIBRARY_DIRS})

set(CTP_SRC CTPClient.cpp CTPClient.h)

ADD_LIBRARY(CTPClient SHARED ${CTP_SRC})
set(CMAKE_PLATFORM_USES_PATH_WHEN_NO_SONAME FALSE)
TARGET_LINK_LIBRARIES(CTPClient ${CTP_MDUSER_LIBRARY})